--- a/latex/macros/macros.tex
+++ b/latex/macros/macros.tex
@@ -77,8 +77,8 @@
 
 \newcommand{\Interior}[0]{\Omega}
 \newcommand{\domain}[0]{\Omega}
-%\newcommand{\Boundary}[0]{\partial \Omega}
-\newcommand{\Boundary}[0]{\Gamma}
+\newcommand{\Boundary}[0]{\partial \Omega}
+%\newcommand{\Boundary}[0]{\Gamma}
 
 \newcommand{\on}[1]{\hskip1.5em \textrm{ on } #1}
 
